--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
