--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.2.0"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
